--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "serve-favicon": "~2.3.0",
     "systemjs": "0.19.27",
     "typescript": "^2.0.3",
-    "zone.js": "0.6.23"
+    "zone.js": "0.6.23",
+    "typings": "^1.3.2"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
