--- a/package.json
+++ b/package.json
@@ -15,50 +15,36 @@
   },
   "license": "ISC",
   "dependencies": {
-
-    "@angular/animations": "^4.1.1",
-    "@angular/common": "^4.1.1",
-    "@angular/compiler": "^4.1.1",
+    "@angular/animations": "^4.3.2",
+    "@angular/common": "4.3.2",
+    "@angular/compiler": "4.3.2",
     "@angular/compiler-cli": "^4.1.1",
-    "@angular/core": "^4.1.1",
-    "@angular/forms": "^4.1.1",
-    "@angular/http": "^4.1.1",
-    "@angular/platform-browser": "^4.1.1",
-    "@angular/platform-browser-dynamic": "^4.1.1",
-    "@angular/platform-server": "^4.1.1",
-    "@angular/router": "^4.1.1",
-    "@angular/upgrade": "^4.1.1",
+    "@angular/core": "4.3.2",
+    "@angular/forms": "4.3.2",
+    "@angular/http": "4.3.2",
+    "@angular/platform-browser": "4.3.2",
+    "@angular/platform-browser-dynamic": "4.3.2",
+    "@angular/platform-server": "^4.3.2",
+    "@angular/router": "3.0.0",
+    "@angular/upgrade": "4.3.2",
     "@cloudinary/angular": "^2.1.1",
     "angular-in-memory-web-api": "~0.3.1",
+    "angular2-in-memory-web-api": "0.0.20",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
-    "cookie-parser": "^1.4.3",
-
-    "@angular/common": "2.4.0",
-    "@angular/compiler": "2.4.0",
-    "@angular/core": "2.4.0",
-    "@angular/forms": "2.4.0",
-    "@angular/http": "2.4.0",
-    "@angular/platform-browser": "2.4.0",
-    "@angular/platform-browser-dynamic": "2.4.0",
-    "@angular/router": "3.0.0",
-    "@angular/upgrade": "2.4.0",
-    "angular2-in-memory-web-api": "0.0.20",
-    "body-parser": "~1.15.2",
-    "bootstrap": "^3.3.7",
     "cloudinary": "^1.4.3",
-    "cookie-parser": "~1.4.3",
-
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
-    "debug": "~2.2.0",
+    "debug": "^2.2.0",
     "es6-shim": "^0.35.1",
-    "express": "^4.14.1",
+    "express": "^4.15.3",
     "gulp-install": "^1.1.0",
     "gulp-typescript": "^2.14.1",
-    "hbs": "~4.0.0",
+    "hbs": "^4.0.1",
     "jsonwebtoken": "^7.1.6",
-    "morgan": "^1.7.0",
-    "multer": "1.1.0",
+    "morgan": "^1.8.2",
+    "multer": "^1.1.0",
     "ng2-bootstrap": "^1.1.9",
     "ng2-cloudinary": "^0.9.2",
     "ng2-uploader": "^1.2.0",
@@ -66,7 +52,7 @@
     "password-hash": "^1.2.2",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.1",
-    "serve-favicon": "^2.3.2",
+    "serve-favicon": "^2.4.3",
     "systemjs": "0.19.27",
     "typescript": "^2.3.2",
     "typings": "^1.3.2",
