--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,10 @@
         "sourceMap": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "removeComments": false,
+        "removeComments": true,
         "noImplicitAny": false,
-        "outDir": "../public/js/app"
+        "outDir": "../public/js/app",
+        "strictNullChecks": true
     },
     "files": [
         "./assets/app/boot.ts"
