Remove unused file
Former-commit-id: a58839dc84c37db38ffd85e940cb40ce925b9c08

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
         "experimentalDecorators": true,
         "removeComments": true,
         "noImplicitAny": false,
-        "outDir": "../public/js/app",
-        "strictNullChecks": true
+        "outDir": "../public/js/app"
+//        ,"strictNullChecks": true
     },
     "files": [
         "./assets/app/boot.ts"
