Remove unused file
Former-commit-id: cd16dc872a69c34ff1ceaf7807609f931c3e91c1

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@ node_modules/*
 code/
 launchFlask.bat
 assets/app/global.ts
-public/js/app/global.js
 node_modules/
 static/
 templates/
 /imports/
+'node_modules' 
+public/images/logos voitures/
