--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "gulp-uglify": "^1.5.1",
     "systemjs-builder": "^0.15.32",
     "typescript": "2.5.3",
-    "typings": "^1.3.2"
+    "typings": "^1.3.2",
+    "@angular/compiler-cli": "4.4.6"
   }
 }
